Finished the survey of the minimum wage literature.

--- a/survey_of_minimum_wage_literature.tex
+++ b/survey_of_minimum_wage_literature.tex
@@ -48,6 +48,74 @@
 
 \maketitle
 
+One of the perennial questions in empirical economics is the effect on minimum wages on unemployment and wages.
+In fact, the empirical analysis of this question goes back to one of the first empirical papers ever written \cite{obenauer1915effect}.
+In \citeyear{card1994minimum}, \citeauthor{card1994minimum} present empirical evidence in their now seminal study that the elasticity is actually very close to zero, counter basic economic theory, which says it should be negative. 
+(Although, no specific magnitude is implied.)
+In so doing, they restarted the then stagnant literature analyzing this question, which has grown quite large in the intervening years.
+This then raises the question what is the current state of literature?
+
+This literature has yet to reach a consensus on the precise value of this elasticity.
+Why might this be the case?
+Two main issues dominate the literature.
+The first is the optimal method for dealing with the spatial heterogeneity in employment growth.
+To calculate the employment effect of minimum wage, you must estimate the employment level in the counterfactual case where the minimum wage was not changed then difference the two employment rates.
+However, employment  trends in different directions at different rates in different regions, and so optimally forming this control is not trivial.
+Consequently, various economists have proposed a large number of methods to do this.
+The second major issue regards the difference between short-run and long-run elasticities.
+One would a priori expect that the long-run elasticity is larger as companies have more time to adjust. 
+However, the short-run elasticity is significantly easier to measure, and so most empirical papers have assumed that the two elasticities are equal.
+
+
+\section*{Empirical Estimates of the Elasticity}
+
+
+Perhaps the most useful article to examine when considering the current state of the literature is \cite{neumark2014revisiting}.
+The authors of this article survey the literature and provide their own empirical estimates using a synthetic control approach. 
+The literature has dealt with the spatial heterogeneity at level of its unit of analysis, the country, by constructing comparison counties using different methods.
+The various papers also usually include various spatial (such as state-level) and time dummy variables as well as other relevant regressors, and then group the counties in different ways.
+\citeauthor{neumark2014revisiting} use a synthetic control approach through which they let the data identify these groups.
+In doing so, they find that their is a teen disemployment elasticity effect of minimum wages is about $-0.15$. 
+
+However, the two main articles that they discuss \cite{allegretto2011minimum} and \cite{dube2010minimum} use different methods for dealing with heterogeneity and find approximately zero effects. 
+\cite{dube2010minimum} compare contiguous cross-border country pairs. 
+They consider the cross-border pairs across the entire country between 1990 and 2006 where there was a difference in the minimum wages. 
+\cite{allegretto2011minimum}, on the other hand, group the states by census tract.
+In addition, they also argue that long-run effects are very small in magnitude using a distributed lag approach to pick up both pre-existing trends and differentiate between long-run and short-run effects. 
+
+In another interesting vein of research, several authors have considered the effect on the recent real declines in minimum wages.
+\cite{bosch2010minimum} finds that almost entirely of the growth in inequality at the bottom end of the earnings inequality in Mexico can be attributed to this.
+\cite{autor2016contribution} arrive at somewhat similar conclusions arguing that a substantial amount, but by no means all, of the increased inequality since 1980 between the 10th and 50th percentiles can be explained this way.
+This is particularly interesting because the minimum wage typically binds significantly below the 10th percentile.
+
+In another related strain of literature, \cite{neumark2012effects} finds that living wage laws reduce employment among the populations that they are trying to help.
+\cite{addison2012effect}, on the other hand, finds that the elasticity of low-wage employment is approximately zero, and instead employment appears to exhibit an independent downward trend in regions where minimum wages are enacted. 
+
+
+\section*{Theoretical work concerning the elasticity}
+
+Two main sets of papers are of interest. 
+In \cite{sorkin2015are}, \citeauthor{sorkin2015are} builds a dynamic industry equilibrium model that reconciles the small estimated short-run employment effects with much larger long-run employment effects. 
+He also makes the interesting point that because most minimum wages in the United States have not been indexed to inflation, the increases themselves are necessarily short-run. 
+That is, the long-run will simply never come.  
+In \cite{aaronson2016industry}, the authors show that restaurant exit and entry both rise following a hike, and that the rise in entry is concentrated in chains which tend to be more capital-intensive. 
+On the other hand, non-entrants see no significant employment changes. 
+They also build a theoretical model to fit these facts.
+
+The other interesting theoretical work is an optimality result by \citeauthor{lee2012optimal} who show that if a government values redistribution towards low wage workers, then in a perfectly competitive labor market a binding minimum wage is desirable. 
+Surprisingly, this result holds true in the presence of optimal nonlinear taxes and transfers. 
+The minimum wage enhances the effectiveness of the transfers through incidence effects as the assume that the unemployment hits the lowest surplus workers first. 
+
+\section*{Conclusion}
+
+As a consequence of the spatial heterogeneity in employment growth, creating good estimates of a particular county's employment rate among low-wage workers in the absence of a change in the minimum wage is quite difficult. 
+Hence, reliably and precisely estimating the relevant elasticity still has not been done, but this elasticity is likely rather small. 
+These difficulties are even stronger if one is considering long-run elasticities because the environments have had more time to change. 
+In addition, most minimum wage hikes in the U.S. have only been temporary as a consequence of inflation.
+We do have, however, strong reason to believe that the long-run elasticity is likely larger in magnitude than the short-run elasticity. 
+
+\newpage
+\printbibliography
 
 
 
